# issue-bear

./: README.md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/api/: app.py  config.py  models.py  user.py
backend/api/routes/: auth.py  issues.py  projects.py
backend/migrations/versions/: 2be1367e8d7b_add_issues_table.py  30096e50dba8_add_archived_to_issue_table.py  33d024bb1eb5_add_verification_table.py  576f4e8ef1e6_add_projects_table.py  899fc039e941_change_projects_token_to_be_unique.py  b07e3c6a0c71_add_created_at_to_issue_table.py  bd8275bf3ff2_add_user_table.py
backend/tests/: test_index.py
web/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
web/src/: App.jsx  Toast.jsx  ToastContainer.jsx  main.jsx  useToast.jsx
web/src/components/: CreateProject.jsx  EditProject.jsx  FeatureCard.jsx  FeedbackButton.jsx  Footer.jsx  InviteMember.jsx  IssueCard.jsx  IssuePane.jsx  ManageMembers.jsx  MembersList.jsx  Navbar.jsx  ProjectList.jsx  ProjectPane.jsx  SyntaxStyle.jsx  TokenInfoCTA.jsx  WelcomeModal.jsx
web/src/pages/: Dashboard.jsx  Docs.jsx  Home.jsx  Login.jsx  PrivacyPolicy.jsx  Register.jsx  TermsOfService.jsx  Verify.jsx
web/src/pages/docs/: create-project.mdx  generate-new-token.mdx  share-project.mdx
web/src/services/: auth-header.jsx  auth.service.jsx  issues.service.jsx  projects.service.jsx
widget/: index.html  style.css  widget.js
widget/old/: index.html  style.css  widget.js
