[tool.poetry]
name = "issue-bear-api"
version = "0.1.0"
description = "API server for Issue Bear"
authors = ["Andreas Backström <mozzo242@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.2"
psycopg2 = "2.9.5"
flask-marshmallow = "0.14.0"
flask-sqlalchemy = "3.0.2"
marshmallow-sqlalchemy = "0.28.1"
python-dotenv = "0.21.0"
Flask-JWT-Extended = "4.4.4"
Flask-Migrate = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
